--- a/noarch/package.json
+++ b/noarch/package.json
@@ -1,4 +1,4 @@
 {
   "name": "Microsoft PowerPoint 365",
-  "main": "https://office.live.com/start/PowerPoint.aspx"
+  "main": "https://www.office.com/launch/powerpoint"
 }
